<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/festivalbg">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_search" />

    <EditText
        android:id="@+id/ed_search"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@drawable/et_round"
        android:ems="10"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/roboto"
        android:hint="@string/exp_fest"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/imgattr"
        app:layout_constraintBottom_toBottomOf="@+id/ed_search"
        app:layout_constraintEnd_toEndOf="@+id/ed_search"
        app:layout_constraintHorizontal_bias="0.029"
        app:layout_constraintStart_toStartOf="@+id/ed_search"
        app:layout_constraintTop_toTopOf="@+id/ed_search"
        app:srcCompat="@drawable/searchicon" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/rblack"
        android:text="@string/festival"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="52sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.482" />

</androidx.constraintlayout.widget.ConstraintLayout>
